# bardoengine

./: .env.example  .gitignore  BUILDING.md  Bardo Data Full.md  CHANGELOG.md  Partuza Script (Ink Source).md  REVIEW.md  SECURITY.md  apnea.ink  build.bat  cap1+interludio.ink  centinelas.ink  compile-ink.bat  compile-ink.cjs  context.md  guia_piola.html  historia.ink  index.html  ink-errors.txt  issue_body.md  museo_demo.ink  package-lock.json  package.json  partuza.ink  serruchin.ink  spider_demo.ink  tailwind.bardo.plugin.js  tailwind.config.js  test-results.json  toybox.ink  vampiro.ink  vite.config.js  vite.config.js.timestamp-1769246945268-05a152f40f841.mjs  vite.config.mjs  vitest.config.js
.claude/commands/: ship.md
.gemini/rules/: bardoengine.md
.github/workflows/: android-build.yml  ci.yml
coverage/: index.html
coverage/components/: AchievementToast.jsx.html  BardoEngineLogo.jsx.html  ChoiceButton.jsx.html  EngineLogoScreen.jsx.html  ErrorBoundary.jsx.html  ExtrasMenu.jsx.html  (+14 more)
docs/: BARDOEDITOR_AI_CONTEXT.md  JULES_TASKS.md  THEMING.md  bug-minigame-continuar-prompt.md
public/: splashscreen.html
scripts/: benchmark-concat.js  build-game.cjs  centinelas-lint.cjs  encrypt-story.cjs  identify-leak.cjs  setup-android.ps1  ship.ps1  verify-watermark.cjs  watermark-table.cjs  watermark.cjs
src/: App.jsx  editor-main.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep  story-config.json
src-tauri/src/: crypto.rs  lib.rs
(+263 files in other folders)
